Lithuanian road colours and ref signs, lighter forest/lake colour so that it does not hide roads

--- a/osmlt/style.xml.template
+++ b/osmlt/style.xml.template
@@ -5,9 +5,11 @@
 ]>
 <Map srs="&srs900913;">
 &fontset-settings;
+&layer-landcover;
 &layer-water;
 &layer-ways;
 &layer-admin;
 &layer-placenames;
+&layer-buildings;
 </Map>
 
