misstyped layer name

--- a/osmlt/style.xml.template
+++ b/osmlt/style.xml.template
@@ -9,7 +9,7 @@
 &layer-landcover;
 &layer-water;
 &layer-buildings;
-&layer-addresing;
+&layer-addressing;
 &layer-ways;
 &layer-power;
 &layer-admin;
