sidewalks, combindes ctsw, national park borders, ferry routes

--- a/osmlt/style.xml.template
+++ b/osmlt/style.xml.template
@@ -8,9 +8,11 @@
 &layer-shapefiles;
 &layer-landcover;
 &layer-water;
+&layer-ferry-routes;
 &layer-buildings;
 &layer-ways;
 &layer-admin;
+&layer-boundaries;
 &layer-placenames;
 </Map>
 
