--- a/osmlt/style.xml.template
+++ b/osmlt/style.xml.template
@@ -3,7 +3,7 @@
     <!ENTITY % entities SYSTEM "inc/entities.xml.inc">
     %entities;
 ]>
-<Map srs="&srs900913;">
+<Map srs="&srs900913;" bgcolor="#FFFFFF">
 &fontset-settings;
 &layer-shapefiles;
 &layer-landcover;
