--- a/osmlt/style.xml.template
+++ b/osmlt/style.xml.template
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE Map[
+<!DOCTYPE Map SYSTEM "mapnik2.dtd" [
     <!ENTITY % entities SYSTEM "inc/entities.xml.inc">
     %entities;
 ]>
